<resources>
    <string name="app_name">Game News</string>

    <string name="open">Abrir</string>
    <string name="close">Cerrar</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="favorites">Favoritos</string>
    <string name="options">Opciones</string>
    <string name="successful">Exitoso</string>
    <string name="error">Error</string>
    <string name="settings">Ajustes</string>
    <string name="account">Cuenta</string>
    <string name="current_user">Usuario actual</string>
    <string name="new_name">Nuevo nombre</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="layout_options">Opciones de vista</string>
    <string name="update">Actualizar</string>
    <string name="fill_some_field">Rellene algún campo</string>
    <string name="change_successful">Cambios hecho</string>
    <string name="tap_again">Toque otra vez</string>
    <string name="tap_twice">Toque dos veces</string>
    <string name="cancel">Cancelar</string>

    <string name="favorite_success">Agregado a favoritos</string>


    <string name="general_info">Información</string>
    <string name="top_players">Puntajes</string>
    <string name="images">Imágenes</string>


    <!--Relacionado a cerrar sesión-->
    <string name="log_out">Cerrar sesión</string>
    <string name="confirm_log_out">¿Desea cerrar sesión?</string>


    <string name="news">Noticias</string>
    <string name="games">Juegos</string>

    <string name="lol">League Of Legends</string>
    <string name="dota">Dota</string>
    <string name="cs_go">CS GO</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="insert_user_name">Ingrese usuario</string>
    <string name="insert_user_password">Ingrese contraseña</string>
    <string name="has_account">¿No tienes una cuenta?</string>
    <string name="fill_fields">Rellene todos los campos</string>
    <string name="log_in_error">Error al iniciar sesión</string>
    <string name="wrong_data_type">Ingrese datos correctos</string>

    <!--String relacionados al registro-->
    <string name="check_password">Confirme contraseña</string>
    <string name="create_account">Crear cuenta</string>
    <string name="password_unmatch">Contraseñas diferentes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
