<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/news_item"
            android:title="@string/news"
            />
            <item
                android:id="@+id/games_subheader"
                android:title="@string/games"
                >
                <menu>

                </menu>

            </item>

        <item
            android:id="@+id/option_subheader"
            android:title="@string/options"
            >
            <menu

                >

                <item

                    android:id="@+id/settings_option"
                    android:title="@string/settings"
                    android:icon="@drawable/ic_settings_24dp"
                    />

                <item
                    android:id="@+id/favorite_option"
                    android:title="@string/favorites"
                    android:icon="@drawable/ic_star_24dp"

                    />

                <item
                    android:id="@+id/log_out_option"
                    android:title="@string/log_out"
                    android:icon="@drawable/ic_close_24dp"
                    />

            </menu>
        </item>



    </group>

</menu>