<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@drawable/radius_border"
        android:orientation="vertical"
        android:padding="8dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_user"
            android:gravity="center_horizontal"
            android:textSize="25dp"
            />
        <TextView
            android:id="@+id/current_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rodrigo"
            android:textSize="18dp"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/new_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_name"
            android:maxLength="15"
            />

        <EditText
            android:id="@+id/new_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLength="8"
            />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_weight="2"
            >
            <Button
                android:id="@+id/update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_weight="1"
                />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>